# Halibut

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  compile_shaders.cmd  compile_shaders.sh
Halibut/: CMakeLists.txt
Halibut/src/: Halibut.h  halibutpch.cpp  halibutpch.h
Halibut/src/Core/: Application.cpp  Application.h  ApplicationImGuiContext.cpp  ApplicationImGuiContext.h  ApplicationRenderContext.cpp  ApplicationRenderContext.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseButtonCodes.h  Timestep.h  Window.h
Halibut/src/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Halibut/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Halibut/src/Platform/Vulkan/: HALIBUTBuffer.cpp  HALIBUTBuffer.h  HALIBUTCommandBuffer.cpp  HALIBUTCommandBuffer.h  HALIBUTCommandPool.cpp  HALIBUTCommandPool.h  HALIBUTDevice.cpp  HALIBUTDevice.h  HALIBUTFrame.cpp  HALIBUTFrame.h  HALIBUTGraphicPipeline.cpp  HALIBUTGraphicPipeline.h  HALIBUTImage.cpp  HALIBUTImage.h  HALIBUTInstance.cpp  HALIBUTInstance.h  HALIBUTMeshBuffer.cpp  HALIBUTMeshBuffer.h  HALIBUTRenderer.cpp  HALIBUTRenderer.h  HALIBUTResourceAllocator.cpp  HALIBUTResourceAllocator.h  HALIBUTSurface.cpp  HALIBUTSurface.h  HALIBUTSwapchain.cpp  HALIBUTSwapchain.h  HALIBUTVertexLayout.h
Halibut/src/Platform/Windows/: WindowsWindow.cpp
Halibut/src/Platform/Winodws/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/scenes/: core_scene.json  scene.json
Sandbox/assets/shaders/: BasicShader.slang  BasicShader.vert.spv
Sandbox/src/: EditorLayer.cpp  EditorLayer.h  HoyoEditor.cpp
assets/shaders/: BasicShader.frag.spv  BasicShader.slang  triangle.frag.spv  triangle.vert.spv
docs/: DeviceLayerRoadmap.md
